name:                blog
version:             0.1.0.0
synopsis:            Blog of Bernd Schwarzenbacher
description:         https://bschwb.github.io
homepage:            https://github.com/bschwb/blog#readme
license:             BSD3
license-file:        LICENSE
author:              Bernd Schwarzenbacher
maintainer:          bernd.schwb@yahoo.com
copyright:           2016 Bernd Schwarzenbacher
category:            Blog
build-type:          Simple
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*
